--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -28,6 +28,11 @@ h1 {
 
 .home-components {
     background-color: #f6f6e9;
+    margin-bottom: 5vh;
 }
 
+/* #buttons-container {
+    display: flex;
+justify-content: center;
+} */
 
