--- a/client/src/components/welcome/welcome.css
+++ b/client/src/components/welcome/welcome.css
@@ -23,3 +23,23 @@ height: 70vh;
     font-size: 1.5em;
     font-weight: bolder;
 }
+
+#recipe-img {
+    background-color: red;
+    height: 60vh;
+    width: 30vw;
+    transform: rotate(15deg);
+    position: absolute;
+    top: 20vh;
+    left: -20vw;
+}
+
+#recipe-img2 {
+    background-color: red;
+    height: 60vh;
+    width: 30vw;
+    transform: rotate(-15deg);
+    position: absolute;
+    top: 35vh;
+    right: -20vw;
+}
